feat(access-mode): 添加访问器生成方案模式支持，更新相关注解及示例